# LLVMCMakeTemplate

./: .gitignore  CMakeLists.txt  README.md  example.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
CMake/: LLVM.cmake
cmake/: Clang.cmake  HunterPackages.cmake  LLVM.cmake
cmake/Hunter/: config.cmake
cmake/Hunter/projects/LLVM/: hunter.cmake
examples/: example.bc
src/: example.cpp
